fix z-index values in audioCard.TimeLine.scss

--- a/src/view/AudioApp/AudioCard/AudioCard.TimeLine.scss
+++ b/src/view/AudioApp/AudioCard/AudioCard.TimeLine.scss
@@ -14,7 +14,7 @@
         background-color: var(--primary-ls-color);
         opacity: 80%;
         top: 0;
-        z-index: 20;
+        z-index: 2;
         transition: left .2s ease-out, right .2s ease-out;
 
     }
@@ -24,7 +24,7 @@
         height: 100%;
         background-color: var(--secondary-color);
         top: 0;
-        z-index: 18;
+        z-index: 1;
         transition: left .2s ease-out;
     }
 }
